@@ -56,6 +56,7 @@ import org.apache.iceberg.connect.events.StartCommit;
 import org.apache.iceberg.connect.events.TableReference;
 import org.apache.iceberg.exceptions.CommitFailedException;
 import org.apache.iceberg.exceptions.NoSuchTableException;
+import org.apache.iceberg.relocated.com.google.common.annotations.VisibleForTesting;
 import org.apache.iceberg.relocated.com.google.common.collect.Maps;
 import org.apache.iceberg.relocated.com.google.common.collect.Streams;
 import org.apache.iceberg.relocated.com.google.common.util.concurrent.ThreadFactoryBuilder;
@@ -168,8 +169,8 @@ class Coordinator extends Channel {
         return;
       }
 
-      if (!(e instanceof CommitFailedException)) {
-        // CommitStateUnknownException, ValidationException, ForbiddenException,
+      if (!isRetryable(e)) {
+        // CommitStateUnknownException, ValidationException, ForbiddenException, ProducerFenced,
         // NPE, anything else -- not retryable, terminate immediately
         throw e;
       }
@@ -193,6 +194,14 @@ class Coordinator extends Channel {
     } finally {
       commitState.endCurrentCommit();
     }
+  }
+
+  @VisibleForTesting
+  static boolean isRetryable(RuntimeException exception) {
+    return exception instanceof CommitFailedException
+        || exception instanceof org.apache.kafka.clients.consumer.CommitFailedException
+        || exception instanceof org.apache.kafka.common.errors.RebalanceInProgressException
+        || exception instanceof org.apache.kafka.common.errors.RetriableException;
   }
 
   private void doCommit(boolean partialCommit) {
@@ -277,7 +286,7 @@ class Coordinator extends Channel {
                   return minOffset == null || envelope.offset() >= minOffset;
                 })
             .map(envelope -> (DataWritten) envelope.event().payload())
-            .collect(Collectors.toList());
+            .toList();
 
     List<DataFile> dataFiles =
         payloads.stream()
@@ -285,7 +294,7 @@ class Coordinator extends Channel {
             .flatMap(payload -> payload.dataFiles().stream())
             .filter(dataFile -> dataFile.recordCount() > 0)
             .filter(distinctByKey(ContentFile::location))
-            .collect(Collectors.toList());
+            .toList();
 
     List<DeleteFile> deleteFiles =
         payloads.stream()
@@ -293,7 +302,7 @@ class Coordinator extends Channel {
             .flatMap(payload -> payload.deleteFiles().stream())
             .filter(deleteFile -> deleteFile.recordCount() > 0)
             .filter(distinctByKey(ContentFile::location))
-            .collect(Collectors.toList());
+            .toList();
 
     if (terminated) {
       throw new ConnectException(
@@ -437,6 +446,7 @@ class Coordinator extends Channel {
         throw new ConnectException("Timed out waiting for coordinator shutdown");
       }
     } catch (InterruptedException e) {
+      Thread.currentThread().interrupt();
       throw new ConnectException("Interrupted while waiting for coordinator shutdown", e);
     }
   }
